# x313_wassertank

./: README.md
x313_tank/: .clangd  .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.defaults
x313_tank/Android/: Wassertank.aia
x313_tank/main/: CMakeLists.txt  idf_component.yml  main.c  pumpe.c  pumpe.h  valve.c  valve.h
x313_tank/main/bluetooth_spp/: bluetooth_spp.c  bluetooth_spp.h
x313_tank/main/gpio_handler/: gpio_handler.c  gpio_handler.h
x313_tank/main/tl_136_sensor/: tl_136_sensor.c  tl_136_sensor.h
x313_tank/main/x313_led_strip/: x313_led_strip.c  x313_led_strip.h
